[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/machado.png" type="Texture" id=1]
[ext_resource path="res://cenas/upgrades/scripts/leviathan.gd" type="Script" id=2]
[ext_resource path="res://cenas/upgrades/melhoria_dosUpgrades/mira.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.36396
height = 9.89949

[sub_resource type="CapsuleShape2D" id=2]
height = 8.28427

[sub_resource type="CircleShape2D" id=3]
radius = 195.576

[node name="leviathan" type="RigidBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 4
collision_mask = 512
script = ExtResource( 2 )

[node name="Machado" type="Sprite" parent="."]
position = Vector2( 1, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, -2 )
rotation = -0.785397
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 525

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6, -2 )
rotation = -0.785397
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[node name="mira" parent="." instance=ExtResource( 3 )]
position = Vector2( 36, 0 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
